월드데이터 확인/목록 기능 추가 + 관리자 알림